# Autograd

./: CMakeLists.txt  README.md
src/: dense_vector.hpp  unique_ref.hpp
src/linalg/: backward.hpp  data_wrapper.hpp  forward.hpp  graph.hpp  mdarray.hpp  meta_helper.hpp  op.hpp
test/: move_validator.hpp  unique.cpp
